--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,63 +2,63 @@ name: CI
 
 env:
   BUILD_CONFIGURATION: Release
-  on: 
-    push:
-      branches: [master]
-    schedule:
-      - cron: "0 2 * * *"
-      - cron: "0 8 * * *"
-      - cron: "0 14 * * *"
-      - cron: "0 20 * * *"
-  jobs:
-    Linux:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v3
-          with:
-            lfs: false
-            submodules: true
-            ref: master
-            token: ${{ secrets.GITHUB_TOKEN }}
-            clean: false
-            fetch-depth: 0
-        - name: Checkout submodules
-          shell: bash
-          run: |
-            git submodule sync --recursive
-            git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
-        - name: Sanitize files
-          shell: bash
-          run: ./sanitize.py
-        - name: "Import bot's GPG key for signing commits"
-          id: import-gpg
-          uses: crazy-max/ghaction-import-gpg@v5
-          with:
-            gpg_private_key: ${{ secrets.ACTION_COMMIT_SING_PRIVATE_KEY }}
-            passphrase: ${{ secrets.ACTION_COMMIT_SING_PASS }}
-            git_config_global: true
-            git_user_signingkey: true
-            git_commit_gpgsign: true
-        - name: "Extract commit data"
-          uses: rlespinasse/git-commit-data-action@v1.x
-        - name: Update submodules
-          id: mod
-          run: |
-            git config --global user.name "Madman10K"
-            git config --global user.email "contact@madladsquad.com"
-            git fetch --all
-        - name: Commit
-          id: commit
-          run: |
-            (git add . && git commit -m "Sanitized" && git push origin master && echo "com=+" >> $GITHUB_OUTPUT) || echo "com=?" >> $GITHUB_OUTPUT
-        - name: Test
-          run: "echo '${{ steps.mod.outputs.out }} ${{ steps.commits.outputs.com }}!'"
-        - name: Create PR
-          if: steps.commit.outputs.com != '?'"
-          uses: JasonEtco/create-an-issue@v2 
-          env:
-            GITHUB_TOKEN: ${{ secrets.ACTION_ISSUE_SECRET }}
-          with:
-            filename: .github/auto-issue-template.md
-            update_existing: true
-            search_existing: open
+on:
+  push:
+    branches: [master]
+  schedule:
+    - cron: "0 2 * * *"
+    - cron: "0 8 * * *"
+    - cron: "0 14 * * *"
+    - cron: "0 20 * * *"
+jobs:
+  Linux:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          lfs: false
+          submodules: true
+          ref: master
+          token: ${{ secrets.GITHUB_TOKEN }}
+          clean: false
+          fetch-depth: 0
+      - name: Checkout submodules
+        shell: bash
+        run: |
+          git submodule sync --recursive
+          git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
+      - name: Sanitize files
+        shell: bash
+        run: ./sanitize.py
+      - name: "Import bot's GPG key for signing commits"
+        id: import-gpg
+        uses: crazy-max/ghaction-import-gpg@v5
+        with:
+          gpg_private_key: ${{ secrets.ACTION_COMMIT_SING_PRIVATE_KEY }}
+          passphrase: ${{ secrets.ACTION_COMMIT_SING_PASS }}
+          git_config_global: true
+          git_user_signingkey: true
+          git_commit_gpgsign: true
+      - name: "Extract commit data"
+        uses: rlespinasse/git-commit-data-action@v1.x
+      - name: Update submodules
+        id: mod
+        run: |
+          git config --global user.name "Madman10K"
+          git config --global user.email "contact@madladsquad.com"
+          git fetch --all
+      - name: Commit
+        id: commit
+        run: |
+          (git add . && git commit -m "Sanitized" && git push origin master && echo "com=+" >> $GITHUB_OUTPUT) || echo "com=?" >> $GITHUB_OUTPUT
+      - name: Test
+        run: "echo '${{ steps.mod.outputs.out }} ${{ steps.commits.outputs.com }}!'"
+      - name: Create PR
+        if: steps.commit.outputs.com != '?'
+        uses: JasonEtco/create-an-issue@v2 
+        env:
+          GITHUB_TOKEN: ${{ secrets.ACTION_ISSUE_SECRET }}
+        with:
+          filename: .github/auto-issue-template.md
+          update_existing: true
+          search_existing: open
