--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,6 +35,6 @@ jobs:
         run: |
           git config --global user.name "Madman10K"
           git config --global user.email "contact@madladsquad.com"
-          git fetch --all
+          git checkout auto || git checkout -b auto
           ./sanitize.py
-          (git add . && git commit -m "auto" && git push origin master) || echo "Nothing to push"
+          (git add . && git commit -m "auto" && git push origin auto) || echo "Nothing to push"
