--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,8 +20,9 @@ jobs:
           submodules: true
           clean: false
           fetch-depth: 0
-          persist-credentials: false
+          #persist-credentials: false
       - name: "Import bot's GPG key for signing commits"
+        id: import-gpg
         uses: crazy-max/ghaction-import-gpg@v5
         with:
           gpg_private_key: ${{ secrets.ACTION_COMMIT_SING_PRIVATE_KEY }}
@@ -29,13 +30,29 @@ jobs:
           git_config_global: true
           git_user_signingkey: true
           git_commit_gpgsign: true
+
       - name: Extract commit data
         uses: rlespinasse/git-commit-data-action@v1.x
       - name: Update submodules
+        id: mod
         run: |
           git config --global user.name "Madman10K"
           git config --global user.email "contact@madladsquad.com"
           git fetch --all
           git checkout auto || git checkout -b auto
           ./sanitize.py
-          (git add . && git commit -m "auto" && git push origin auto) || echo "Nothing to push"
+      - name: Commit
+        id: commit
+        run: |
+          (git add . && git commit -m "auto" && git push origin auto && echo "com=+" >> $GITHUB_OUTPUT) || echo "com=?" >> $GITHUB_OUTPUT
+      - name: Test
+        run: "echo '${{ steps.mod.outputs.out }} ${{ steps.commits.outputs.com }}!'"
+      - name: Create PR
+        if: "steps.commit.outputs.com != '?'"
+        uses: JasonEtco/create-an-issue@v2 
+        env:
+          GITHUB_TOKEN: ${{ secrets.ACTION_ISSUE_SECRET }}
+        with:
+          filename: .github/auto-issue-template.md
+          update_existing: true
+          search_existing: open
