--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,12 +39,12 @@ jobs:
           git config --global user.name "Madman10K"
           git config --global user.email "contact@madladsquad.com"
           git fetch --all
-          git checkout auto || git checkout -b auto
+          git checkout master || git checkout -b master
           ./sanitize.py
       - name: Commit
         id: commit
         run: |
-          (git add . && git commit -m "auto" && git push origin auto && echo "com=+" >> $GITHUB_OUTPUT) || echo "com=?" >> $GITHUB_OUTPUT
+          (git add . && git commit -m "auto" && git push origin master && echo "com=+" >> $GITHUB_OUTPUT) || echo "com=?" >> $GITHUB_OUTPUT
       #- name: Test
       #  run: "echo '${{ steps.mod.outputs.out }} ${{ steps.commits.outputs.com }}!'"
       #- name: Create PR
