--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,6 +41,7 @@ jobs:
           git fetch --all
           git checkout master || git checkout -b master
           ./sanitize-official.py
+          ./sanitize-community.py
       - name: Commit
         id: commit
         run: |
